# distributed-inference

./: .gitignore  README.md  compose.yml  task.md
.devcontainer/coordinator/: compose-override.yml  devcontainer.json
.devcontainer/worker/: compose-override.yml  devcontainer.json
coordinator/: dockerfile  pyproject.toml
coordinator/app/: custom_logging.py  main.py  utility.py
coordinator/app/proto/: inference_pb2.py  private_pb2.py
grafana/: grafana.db
licenses/: third_party_licenses.md
loki/: loki-config.yaml
prometheus/: prometheus.yml
promtail/: promtail-config.yaml
proto/: compile_proto.ps1  compile_proto.sh  compile_proto_coordinator.sh  compile_proto_test.ps1  compile_proto_worker.sh  inference.proto  private.proto  public.proto
test/: generate_validation_data.py  grpc_test_client.py  interactive_faults.py  pyproject.toml  test_crash.py  test_delay.py  test_fault_tolerance.py  test_packet_loss.py  test_traffic.py  traffic_generator.py  validation_data.jsonl  verify_pipeline.py
test/proto/: inference_pb2_grpc.py  private_pb2_grpc.py  public_pb2_grpc.py
worker/: dockerfile  pyproject.toml
worker/app/: custom_logging.py  main.py
worker/app/proto/: public_pb2.py
